k8s/cloudflare-tunnel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k3s-dreamyarddev-tunnel
  namespace: cloudflare
  labels:
    app: tunnel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k3s-dreamyarddev-tunnel
  template:
    metadata:
      labels:
        app: k3s-dreamyarddev-tunnel
    spec:
      containers:
        - name: k3s-dreamyarddev-tunnel
          image: cloudflare/cloudflared:latest
          args:
            - tunnel
            - --no-autoupdate
            - run
            - --token
            - $(TOKEN)
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 1m
              memory: 10Mi
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 1
  progressDeadlineSeconds: 600
